# 1c-products-price

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.json
configs/: claude-code.json  codex.yaml  opencode.json
docs/: configuration.md  development.md  installation.md  tools.md
docs/tasks/: v1.md
src/mcp_1c_price/: __main__.py  db.py  server.py  settings.py  updater.py
tests/: test_db.py  test_updater.py
