[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-1c-price"
version = "0.1.0"
description = "MCP server for 1C software product price lookup"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "xlrd>=2.0",
    "rapidfuzz>=3.0",
    "python-dotenv>=1.0",
]

[project.scripts]
mcp-1c-price        = "mcp_1c_price:main"
mcp-1c-price-update = "mcp_1c_price.updater:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_1c_price"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
